# C-_Labs

./: main.cpp
Practice_2/: Task1.qbs.user.4ed1381
Practice_4/: mainwindow.cpp  mainwindow.h
Practice_5/: CMakeLists.txt  MainWindow.cpp  MyPainter.cpp  MyPainter.h  Signal.cpp  Signal.h
Practice_6/: Box3D.cpp  Box3D.h  Cube3D.cpp  Cube3D.h  Point3D.cpp  Point3D.h  Sphere3D.cpp  Sphere3D.h  Task6.cpp  Task6.vcxproj  Task6.vcxproj.filters  Tetra3D.cpp  Tetra3D.h
